--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
-    "heatmap.js": "^2.0.5",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "serialport": "^5.0.0",
+    "serve-favicon": "~2.4.2",
+    "socket.io": "^2.0.3"
   }
 }
