--- a/absp-lib/package.json
+++ b/absp-lib/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "johnny-five": "^0.11.6",
     "morgan": "~1.8.1",
     "serialport": "^5.0.0",
     "serve-favicon": "~2.4.2",
